First review of Home Page

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#links">Contacts </a>
+            <a class="nav-link" href="#dashBoard">DashBoard </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#pricing">Pricing </a>
+            <a class="nav-link" href="#linkSelf">Contacts </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Footer">Download </a>
+            <a class="nav-link" href="#download">Download </a>
           </li>
         </ul>
       </div>
@@ -48,10 +48,8 @@
         <div class="col-lg-6">
           <h1 class="head">Join the craze and dive into crypto.</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-            delectus culpa vitae nihil aliquid pariatur dolor, eum quam
-            adipisci dignissimos nesciunt illo quaerat veniam eius incidunt
-            facilis doloremque quasi molestiae.
+            Dive into the crypto craze and join the digital revolution. Discover endless possibilities, take control of
+            your finances, and invest in the future of technology. Don't miss out - start your journey today.
           </p>
 
           <button type="button" class="btn btn-outline-light btn-lg downlaod-button">
@@ -97,9 +95,27 @@
     </div>
   </section>
 
-  <section id="features"></section>
+  <section id="features">
+    <div class="row">
+      <div class="col-lg-4">
+        <i class="fa-solid fa-circle-check"></i>
+        <h3>Easy to use.</h3>
+        <p class="text">Simple solutions for effortless experiences</p>
+      </div>
+      <div class="col-lg-4">
+        <i class="fa-solid fa-bullseye"></i>
+        <h3>Featured Content.</h3>
+        <p class="text">Discover the hidden gems within our website.</p>
+      </div>
+      <div class="col-lg-4"><i class="fa-solid fa-heart"></i>
+        <!-- <i class="fa-sharp fa-solid fa-file-certificate"></i> -->
+        <h3></i>Guarenteed to learn.</h3>
+        <p class="text">Find the passion of yours life to learn or your money back.</p>
+      </div>
+    </div>
+  </section>
 
-  <section class="topics">
+  <section class="topics" id="dashBoard">
     <h2>Let's Dive In...</h2>
 
     <div class="container-fluid">
@@ -118,6 +134,7 @@
                     types of
                     blockchains.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -136,6 +153,7 @@
                     This topic cover the basics of cryptocurrencies, including how they work, the different types of
                     cryptocurrencies, and their uses.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -156,6 +174,7 @@
                     This topic cover the basics of smart contracts, including what they are, how they work, and their
                     benefits.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -174,6 +193,7 @@
                     This topic cover the different industries that are using blockchain technology, such as finance,
                     healthcare, supply chain, and real estate.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -194,6 +214,7 @@
                     This topic cover the different security features of blockchain technology, such as cryptography,
                     consensus mechanisms, and decentralized networks.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -212,6 +233,7 @@
                     This topic cover the basics of Decentralized Applications (dApps), including what they are, how they
                     work, and their benefits.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -232,6 +254,7 @@
                     This topic cover the basics of blockchain development, including programming languages, tools, and
                     frameworks used to build blockchain applications.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -250,6 +273,7 @@
                     Boost your career in blockchain technology and stand out in the industry with our respected and
                     recognized certification program.
                   </p>
+                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
                 </div>
               </div>
             </div>
@@ -258,6 +282,76 @@
       </div>
   </section>
 
+  <section id="sponser">
+    <h2>Our Collaborators</h2>
+
+    <img class="partners" src="images/icons8-google-cloud-144.png" alt="cloud">
+    <img class="partners" src="images/icons8-geeksforgeeks-144.png" alt="GfG">
+    <img class="partners" src="images/icons8-amd-144.png" alt="amd">
+    <img class="partners" src="images/iiitbh.png" alt="iiitbh">
+  </section>
+
+  <section id="download" class="">
+    <h1>Ride the wave of the future and join the thrilling world of crypto with us, empowering you with blockchain
+      knowledge.</h1>
+    <button type="button" class="btn btn-outline-light btn-lg downlaod-button"><i class="fa-brands fa-apple"></i>
+      Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>
+      Download</button></div>
+
+  </section>
+
+  <footer class="section footer-classic context-dark bg-image" style="background: #fff;">
+    <div class="container">
+      <div class="row row-30">
+        <div class="col-md-4 col-xl-5">
+          <div class="pr-xl-4"><a class="navbar-brand" href="">CryptoCraze</a>
+            <p>We are dedicated to providing you with the most comprehensive and accessible blockchain learning
+              resources available, so you can feel confident and empowered to take on the challenges of this exciting
+              and rapidly evolving industry.</p>
+            <!-- Rights-->
+            <p class="rights"><span>©  </span><span class="copyright-year">2023</span><span> </span><span>Shaikh
+                Abdullah -IIITBH</span><span>. </span><span>All Rights
+                Reserved.</span></p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Contacts</h5>
+          <dl class="contact-list">
+            <dt>Address:</dt>
+            <dd>Indian Institute of Information Technology-Bhagalpur, Sabour, Bihar</dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>email:</dt>
+            <dd><a href="mailto:shaikh.2201027cs@iiitbh.ac.in">shaikh.2201027cs@iiitbh.ac.in</a></dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>phones:</dt>
+            <dd><a href="tel:+918904459630">Shaikh Abdullah</a> <span>or</span> <a href="tel:#">Biraj Sanghai</a>
+            </dd>
+          </dl>
+        </div>
+        <div class="col-md-4 col-xl-3">
+          <h5>Links</h5>
+          <ul class="nav-list">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Donate us.</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <section id="linkSelf">
+    <div class="last">
+      <i class="con1 fa-brands fa-github fa-2xl"></i>
+      <i class="con2 fa-brands fa-instagram fa-2xl"></i>
+      <i class="con3 fa-brands fa-linkedin fa-2xl"></i>
+      <p class="copyright">© Copyright CryptoCraze @Shaikh Abdullah</p>
+    </div>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
     crossorigin="anonymous"></script>
