Home Page version1 complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <section class="title">
+  <section id="navfix">
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="">CryptoCraze</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
@@ -43,6 +43,9 @@
         </ul>
       </div>
     </nav>
+  </section>
+  <section class="title">
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6">
@@ -51,13 +54,14 @@
             Dive into the crypto craze and join the digital revolution. Discover endless possibilities, take control of
             your finances, and invest in the future of technology. Don't miss out - start your journey today.
           </p>
-
-          <button type="button" class="btn btn-outline-light btn-lg downlaod-button">
-            <i class="fa-brands fa-apple"></i> Download
-          </button>
-          <button type="button" class="btn btn-outline-light btn btn-lg download-button">
-            <i class="fa-brands fa-google-play"></i> Download
-          </button>
+          <a href="/components/notFound.html"><button type="button"
+              class="btn btn-outline-light btn-lg downlaod-button">
+              <i class="fa-brands fa-apple"></i> Download
+            </button></a>
+          <a href="/components/notFound.html"><button type="button"
+              class="btn btn-outline-light btn-lg downlaod-button">
+              <i class="fa-brands fa-google-play"></i> Download
+            </button></a>
         </div>
         <div class="col-lg-5">
           <div class="card text-center">
@@ -87,7 +91,7 @@
                   style="margin-bottom: 16px" />
                 <label for="floatingPassword">Confirm your password</label>
               </div>
-              <a href="#" class="btn btn-primary">Register</a>
+              <a href="/components/notFound.html" class="btn btn-primary">Register</a>
             </div>
           </div>
         </div>
@@ -134,7 +138,8 @@
                     types of
                     blockchains.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -153,7 +158,8 @@
                     This topic cover the basics of cryptocurrencies, including how they work, the different types of
                     cryptocurrencies, and their uses.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -174,7 +180,8 @@
                     This topic cover the basics of smart contracts, including what they are, how they work, and their
                     benefits.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -193,7 +200,8 @@
                     This topic cover the different industries that are using blockchain technology, such as finance,
                     healthcare, supply chain, and real estate.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -214,7 +222,8 @@
                     This topic cover the different security features of blockchain technology, such as cryptography,
                     consensus mechanisms, and decentralized networks.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -233,7 +242,8 @@
                     This topic cover the basics of Decentralized Applications (dApps), including what they are, how they
                     work, and their benefits.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -254,7 +264,8 @@
                     This topic cover the basics of blockchain development, including programming languages, tools, and
                     frameworks used to build blockchain applications.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -273,7 +284,8 @@
                     Boost your career in blockchain technology and stand out in the industry with our respected and
                     recognized certification program.
                   </p>
-                  <p><button class="btn btn-outline-primary rounded-pill px-3" type="button">Learn More</button></p>
+                  <p> <a href="/components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                        type="button">Get Certified!</button></a></p>
                 </div>
               </div>
             </div>
@@ -285,19 +297,24 @@
   <section id="sponser">
     <h2>Our Collaborators</h2>
 
-    <img class="partners" src="images/icons8-google-cloud-144.png" alt="cloud">
-    <img class="partners" src="images/icons8-geeksforgeeks-144.png" alt="GfG">
-    <img class="partners" src="images/icons8-amd-144.png" alt="amd">
-    <img class="partners" src="images/iiitbh.png" alt="iiitbh">
+    <a href="https://cloud.google.com/"><img class="partners" src="images/google-cloud-144.png" alt="cloud"></a>
+    <a href="https://www.geeksforgeeks.org/"><img class="partners" src="images/geeksforgeeks-144.png" alt="GfG"></a>
+    <a href="https://www.amd.com/"><img class="partners" src="images/amd-144.png" alt="amd"></a>
+    <a href="https://www.iiitbh.ac.in/"><img class="partners" src="images/iiitbh.png" alt="iiitbh"></a>
+
   </section>
 
   <section id="download" class="">
     <h1>Ride the wave of the future and join the thrilling world of crypto with us, empowering you with blockchain
       knowledge.</h1>
-    <button type="button" class="btn btn-outline-light btn-lg downlaod-button"><i class="fa-brands fa-apple"></i>
-      Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>
-      Download</button></div>
+    <a href="/components/notFound.html"><button type="button" class="btn btn-outline-light btn-lg downlaod-button"><i
+          class="fa-brands fa-apple"></i>
+        Download</button></a>
+
+    <a href="/components/notFound.html"><button type="button" class="btn btn-outline-light btn-lg download-button"
+        href="/components/notFound.html"><i class="fa-brands fa-google-play"></i>
+        Download</button></a>
+    </div>
 
   </section>
 
@@ -327,7 +344,8 @@
           </dl>
           <dl class="contact-list">
             <dt>phones:</dt>
-            <dd><a href="tel:+918904459630">Shaikh Abdullah</a> <span>or</span> <a href="tel:#">Biraj Sanghai</a>
+            <dd><a href="tel:+918904459630">Shaikh Abdullah</a>
+              <!-- <span>or</span> <a href="tel:#">Biraj Sanghai</a> -->
             </dd>
           </dl>
         </div>
@@ -335,10 +353,10 @@
           <h5>Links</h5>
           <ul class="nav-list">
             <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="/components/notFound.html">Projects</a></li>
+            <li><a href="/components/notFound.html">Blog</a></li>
             <li><a href="#">Contacts</a></li>
-            <li><a href="#">Donate us.</a></li>
+            <li><a href="/components/notFound.html">Donate us.</a></li>
           </ul>
         </div>
       </div>
@@ -346,10 +364,12 @@
   </footer>
   <section id="linkSelf">
     <div class="last">
-      <i class="con1 fa-brands fa-github fa-2xl"></i>
-      <i class="con2 fa-brands fa-instagram fa-2xl"></i>
-      <i class="con3 fa-brands fa-linkedin fa-2xl"></i>
-      <p class="copyright">© Copyright CryptoCraze @Shaikh Abdullah</p>
+      <a href="https://github.com/Facelift2376"><i class="con1 fa-brands fa-github fa-2xl"></i></a>
+      <a href="https://www.instagram.com/shabdullah_martian/"><i class="con2 fa-brands fa-instagram fa-2xl"></i></a>
+      <a
+        href="https://www.linkedin.com/in/shaikh-abdullah-60a046259?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B9L1iqR4rQNGu7xscZ6VRwg%3D%3D"><i
+          class="con3 fa-brands fa-linkedin fa-2xl"></i></a>
+      <p class="copyright">© Copyright CryptoCraze <span> </span> @Shaikh Abdullah</p>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
