--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               class="btn btn-outline-light btn-lg downlaod-button">
               <i class="fa-brands fa-apple"></i> Download
             </button></a>
-          <a href="./components/notFound.html"><button type="button"
+          <a href="CryptoCraze/components/notFound.html"><button type="button"
               class="btn btn-outline-light btn-lg downlaod-button">
               <i class="fa-brands fa-google-play"></i> Download
             </button></a>
