--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Dive into the crypto craze and join the digital revolution. Discover endless possibilities, take control of
             your finances, and invest in the future of technology. Don't miss out - start your journey today.
           </p>
-          <a href="./components/notFound.html"><button type="button"
+          <a href="CryptoCraze/components/notFound.html"><button type="button"
               class="btn btn-outline-light btn-lg downlaod-button">
               <i class="fa-brands fa-apple"></i> Download
             </button></a>
@@ -91,7 +91,7 @@
                   style="margin-bottom: 16px" />
                 <label for="floatingPassword">Confirm your password</label>
               </div>
-              <a href="./components/notFound.html" class="btn btn-primary">Register</a>
+              <a href="CryptoCraze/components/notFound.html" class="btn btn-primary">Register</a>
             </div>
           </div>
         </div>
@@ -138,8 +138,8 @@
                     types of
                     blockchains.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -158,8 +158,8 @@
                     This topic cover the basics of cryptocurrencies, including how they work, the different types of
                     cryptocurrencies, and their uses.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -180,8 +180,8 @@
                     This topic cover the basics of smart contracts, including what they are, how they work, and their
                     benefits.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -200,8 +200,8 @@
                     This topic cover the different industries that are using blockchain technology, such as finance,
                     healthcare, supply chain, and real estate.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -222,8 +222,8 @@
                     This topic cover the different security features of blockchain technology, such as cryptography,
                     consensus mechanisms, and decentralized networks.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -242,8 +242,8 @@
                     This topic cover the basics of Decentralized Applications (dApps), including what they are, how they
                     work, and their benefits.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -264,8 +264,8 @@
                     This topic cover the basics of blockchain development, including programming languages, tools, and
                     frameworks used to build blockchain applications.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -284,8 +284,8 @@
                     Boost your career in blockchain technology and stand out in the industry with our respected and
                     recognized certification program.
                   </p>
-                  <p> <a href="./components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Get Certified!</button></a></p>
+                  <p> <a href="CryptoCraze/components/notFound.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Get Certified!</button></a></p>
                 </div>
               </div>
             </div>
@@ -307,12 +307,13 @@
   <section id="download" class="">
     <h1>Ride the wave of the future and join the thrilling world of crypto with us, empowering you with blockchain
       knowledge.</h1>
-    <a href="./components/notFound.html"><button type="button" class="btn btn-outline-light btn-lg downlaod-button"><i
-          class="fa-brands fa-apple"></i>
+    <a href="CryptoCraze/components/notFound.html"><button type="button"
+        class="btn btn-outline-light btn-lg downlaod-button"><i class="fa-brands fa-apple"></i>
         Download</button></a>
 
-    <a href="./components/notFound.html"><button type="button" class="btn btn-outline-light btn-lg download-button"
-        href="./components/notFound.html"><i class="fa-brands fa-google-play"></i>
+    <a href="CryptoCraze/components/notFound.html"><button type="button"
+        class="btn btn-outline-light btn-lg download-button" href="CryptoCraze/components/notFound.html"><i
+          class="fa-brands fa-google-play"></i>
         Download</button></a>
     </div>
 
@@ -353,10 +354,10 @@
           <h5>Links</h5>
           <ul class="nav-list">
             <li><a href="#">About</a></li>
-            <li><a href="./components/notFound.html">Projects</a></li>
-            <li><a href="./components/notFound.html">Blog</a></li>
+            <li><a href="CryptoCraze/components/notFound.html">Projects</a></li>
+            <li><a href="CryptoCraze/components/notFound.html">Blog</a></li>
             <li><a href="#">Contacts</a></li>
-            <li><a href="./components/notFound.html">Donate us.</a></li>
+            <li><a href="CryptoCraze/components/notFound.html">Donate us.</a></li>
           </ul>
         </div>
       </div>
