--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             Dive into the crypto craze and join the digital revolution. Discover endless possibilities, take control of
             your finances, and invest in the future of technology. Don't miss out - start your journey today.
           </p>
-          <a href="CryptoCraze/components/notFound.html"><button type="button"
+          <a href="components/notFound.html"><button type="button"
               class="btn btn-outline-light btn-lg downlaod-button">
               <i class="fa-brands fa-apple"></i> Download
             </button></a>
-          <a href="CryptoCraze/components/notFound.html"><button type="button"
+          <a href="components/notFound.html"><button type="button"
               class="btn btn-outline-light btn-lg downlaod-button">
               <i class="fa-brands fa-google-play"></i> Download
             </button></a>
