--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     types of
                     blockchains.
                   </p>
-                  <p> <a href="components/chapter_1.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="components/IndroductionToBlockchainTechnology.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -156,8 +156,8 @@
                     This topic cover the basics of cryptocurrencies, including how they work, the different types of
                     cryptocurrencies, and their uses.
                   </p>
-                  <p> <a href="components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="components/Cryptocurrencies.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -178,7 +178,7 @@
                     This topic cover the basics of smart contracts, including what they are, how they work, and their
                     benefits.
                   </p>
-                  <p> <a href="components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                  <p> <a href="components/SmartContracts.html"><button class="btn btn-outline-primary rounded-pill px-3"
                         type="button">Explore</button></a></p>
                 </div>
               </div>
@@ -198,8 +198,8 @@
                     This topic cover the different industries that are using blockchain technology, such as finance,
                     healthcare, supply chain, and real estate.
                   </p>
-                  <p> <a href="components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="components/BlockChainUseCases.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -220,8 +220,8 @@
                     This topic cover the different security features of blockchain technology, such as cryptography,
                     consensus mechanisms, and decentralized networks.
                   </p>
-                  <p> <a href="components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="components/BlockchainSecurity.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
@@ -240,7 +240,7 @@
                     This topic cover the basics of Decentralized Applications (dApps), including what they are, how they
                     work, and their benefits.
                   </p>
-                  <p> <a href="components/notFound.html"><button class="btn btn-outline-primary rounded-pill px-3"
+                  <p> <a href="components/dApps.html"><button class="btn btn-outline-primary rounded-pill px-3"
                         type="button">Explore</button></a></p>
                 </div>
               </div>
@@ -262,8 +262,8 @@
                     This topic cover the basics of blockchain development, including programming languages, tools, and
                     frameworks used to build blockchain applications.
                   </p>
-                  <p> <a href="components/notFound.htmll"><button class="btn btn-outline-primary rounded-pill px-3"
-                        type="button">Explore</button></a></p>
+                  <p> <a href="components/BlockchainDevelopment.html"><button
+                        class="btn btn-outline-primary rounded-pill px-3" type="button">Explore</button></a></p>
                 </div>
               </div>
             </div>
